[package]
name = "tree-sitter-stack-graphs"
version = "0.0.0"
description = "Create stack graphs using tree-sitter parsers"
homepage = "https://github.com/github/stack-graphs/tree-sitter-stack-graphs"
repository = "https://github.com/github/stack-graphs/"
readme = "README.md"
license = "MIT OR Apache-2.0"
authors = [
  "GitHub <opensource+stack-graphs@github.com>",
  "Douglas Creager <dcreager@dcreager.net>"
]
edition = "2018"

[features]
copious-debugging = []

[lib]
# All of our tests are in the tests/it "integration" test executable.
test = false

[dependencies]
lsp-positions = { version="0.1", path="../lsp-positions" }
stack-graphs = { version="0.3", path="../stack-graphs", features=["lsp-positions"] }
thiserror = "1.0"
tree-sitter = { version=">= 0.19" }

[dependencies.tree-sitter-graph]
version ="0.2"
#path = "../../tree-sitter-graph"
git = "https://github.com/tree-sitter/tree-sitter-graph"
rev = "9677a357a6b7c0bcbdc3b85d596b3b0609213ce2"
